name:           perdure-file
version:        0.0.3
cabal-version:  >=1.2
build-type:     Simple
author:         Patrick

library
  hs-source-dirs:  src
  build-depends:   
    base >= 4.9,
    cognimeta-utils >= 0.1.6,
    mtl >=2.1.3,
    containers >=0.5.5,
    bytestring >=0.10.4
  ghc-options:     -Wall
  exposed-modules: 
                   Database.Perdure.LocalStoreFile,
                   Database.Perdure.StoreFile,
                   Database.Perdure.Validator

